--- a/webApp/package.json
+++ b/webApp/package.json
@@ -12,23 +12,31 @@
   "description": "",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "dropbox": "^10.34.0",
+    "dropbox-sdk": "^0.1.1",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
+    "googleapis": "^144.0.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
-    "mysql2": "^3.12.0"
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "mysql2": "^3.12.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "gulp": "^5.0.0",
     "gulp-sass": "^6.0.0",
-    "gulp-sourcemaps": "^3.0.0",
+    "gulp-sourcemaps": "^2.6.5",
     "nodemon": "^3.1.9",
     "sass": "^1.83.4"
   }
